# pluto-style-template

./: .gitignore  MANIFEST.in  README.md  license.txt  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py
pluto_theme/: hooks.py  modules.txt
pluto_theme/config/: desktop.py
pluto_theme/public/css/: pluto_theme.bundle.css  tailwind.css  variables.css
pluto_theme/public/css/components/: buttons.css  cards.css  dropdowns.css  forms.css  indicators.css  lists.css  modals.css
pluto_theme/public/css/layout/: footer.css  navbar.css  sidebar.css
pluto_theme/public/css/pages/: desk.css  login.css  print.css
pluto_theme/public/css/utilities/: spacing.css  typography.css
pluto_theme/public/js/: pluto_theme.bundle.js
src/: tailwind.css
